# allegro5-app

./: CMakeLists.txt  README.md
src/: main.cpp
src/app/: AbstractGraphicDriver.h  Application.cpp
src/gk/: AllegroGraphicDriver.cpp  Cohen.cpp  Lab01.cpp  Lab03.cpp  Lab4.cpp  Lab5.cpp
